--- a/style.css
+++ b/style.css
@@ -100,3 +100,55 @@ button:active {
     background-color: white;
     color: #df0d0d;
 }
+
+#title {
+    position: absolute;
+    font-weight: 700;
+    top: 5rem;
+    left: 49.5%;
+    transform: translateX(-49.5%);
+    font-size: 1.75rem;
+    width: fit-content;
+    color: whitesmoke;
+    text-align: center;
+}
+#title span {
+    color: #df0d0d;
+}
+#footer {
+    font-family: 'Courier New', Courier, monospace;
+    position: absolute;
+    font-weight: 900;
+    bottom: 5rem;
+    left: 50%;
+    color: #222;
+    transform: translateX(-50%);
+    font-size: 1rem;
+    text-align: center;
+}
+#footer a {
+    font-family: 'Courier New', Courier, monospace;
+    color: #222;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+@media (max-width: 480px) {
+    .container {
+        position: absolute;
+        background-color: white;
+        width: 350px;
+        padding: 50px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 15px 30px 35px rgba(0, 0, 0, .1);
+        border-radius: 10px;
+        perspective: 300px;
+    }
+    #title {
+        left: 48.5%;
+        transform: translateX(-48.5%);
+        font-size: 1.75rem;
+    }
+}
