--- a/style.css
+++ b/style.css
@@ -150,5 +150,10 @@ button:active {
         left: 48.5%;
         transform: translateX(-48.5%);
         font-size: 1.75rem;
+        margin-bottom: 5rem;
+        top: 2.5rem;
+    }
+    #footer {
+        bottom: 2.5rem;
     }
 }
